<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina5_9" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="HelveticaNeue.ttc">
            <string>HelveticaNeue-Bold</string>
        </array>
    </customFonts>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="MyViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="StopWatchApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8H4-tH-6a6">
                                <rect key="frame" x="0.0" y="411" width="375" height="401"/>
                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            </imageView>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hHU-Vf-qgm">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="411"/>
                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="411" id="ETn-CK-Mhn"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qJ4-oi-0zM">
                                <rect key="frame" x="275" y="170" width="63" height="70"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="40"/>
                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text=":" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ja9-AW-vpX">
                                <rect key="frame" x="156" y="170" width="63" height="70"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="40"/>
                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Stop Watch" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vaG-6s-PjW">
                                <rect key="frame" x="117" y="97" width="140" height="36"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="23"/>
                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uoc-ai-4nT">
                                <rect key="frame" x="50" y="170" width="63" height="70"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="40"/>
                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X5X-E1-bZp" userLabel="Play Button">
                                <rect key="frame" x="200" y="436" width="110" height="57"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="23"/>
                                <state key="normal" title="Play"/>
                                <connections>
                                    <action selector="playButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JRY-OU-Tel"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ddD-2A-Owa" userLabel="Reset Button">
                                <rect key="frame" x="50" y="436" width="110" height="57"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="23"/>
                                <state key="normal" title="Reset"/>
                                <connections>
                                    <action selector="resetButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZMi-D2-97m"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5VB-mc-2b5" userLabel="Pause Button">
                                <rect key="frame" x="200" y="436" width="110" height="57"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="23"/>
                                <state key="normal" title="Pause"/>
                                <connections>
                                    <action selector="pauseButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="d88-9t-eOQ"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="8H4-tH-6a6" firstAttribute="top" secondItem="hHU-Vf-qgm" secondAttribute="bottom" id="0eH-kf-31w"/>
                            <constraint firstAttribute="bottom" secondItem="8H4-tH-6a6" secondAttribute="bottom" id="3nU-sj-lYJ"/>
                            <constraint firstItem="8H4-tH-6a6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="AMV-gC-M2H"/>
                            <constraint firstItem="hHU-Vf-qgm" firstAttribute="trailing" secondItem="8H4-tH-6a6" secondAttribute="trailing" id="M0t-6H-52K"/>
                            <constraint firstItem="8H4-tH-6a6" firstAttribute="top" secondItem="hHU-Vf-qgm" secondAttribute="bottom" id="d0P-P6-aZQ"/>
                            <constraint firstAttribute="trailing" secondItem="8H4-tH-6a6" secondAttribute="trailing" id="duS-19-XEq"/>
                            <constraint firstItem="8H4-tH-6a6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ecg-Ps-1Of"/>
                            <constraint firstItem="hHU-Vf-qgm" firstAttribute="leading" secondItem="8H4-tH-6a6" secondAttribute="leading" id="kb5-Xy-9Kt"/>
                            <constraint firstAttribute="bottom" secondItem="8H4-tH-6a6" secondAttribute="bottom" id="lcQ-K2-yyb"/>
                            <constraint firstItem="8H4-tH-6a6" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="lq0-q4-goC"/>
                            <constraint firstItem="hHU-Vf-qgm" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="mWh-EU-RSt"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="minutesLabel" destination="uoc-ai-4nT" id="jZu-r8-obD"/>
                        <outlet property="pauseButton" destination="5VB-mc-2b5" id="XQ7-hI-4eT"/>
                        <outlet property="playButton" destination="X5X-E1-bZp" id="dTn-Cx-8aH"/>
                        <outlet property="resetButton" destination="ddD-2A-Owa" id="Tw6-LU-A6S"/>
                        <outlet property="secondsLabel" destination="qJ4-oi-0zM" id="HZm-4U-Dg1"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="304.80000000000001" y="137.4384236453202"/>
        </scene>
    </scenes>
</document>
